--- a/feature-daily/src/main/res/layout/fragment_daily.xml
+++ b/feature-daily/src/main/res/layout/fragment_daily.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     >
 
   <ImageView
@@ -12,7 +13,8 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="16dp"
-    />
+      app:layout_constraintTop_toTopOf="parent"
+      />
 
   <TextView
       android:id="@+id/weather_temperature"
@@ -21,6 +23,7 @@
       android:layout_margin="16dp"
       android:textAlignment="center"
       android:textSize="12sp"
+      app:layout_constraintTop_toBottomOf="@id/weather_icon"
       tools:text="12 Degrees"
       />
 
@@ -31,6 +34,7 @@
       android:layout_margin="16dp"
       android:textAlignment="center"
       android:textSize="12sp"
+      app:layout_constraintTop_toBottomOf="@id/weather_temperature"
       tools:text="Some Quote that is inspirational"
       />
 
@@ -41,7 +45,16 @@
       android:layout_margin="16dp"
       android:textAlignment="center"
       android:textSize="12sp"
+      app:layout_constraintTop_toBottomOf="@id/quote_text"
       tools:text="Some Author"
       />
 
-</LinearLayout>
+  <androidx.recyclerview.widget.RecyclerView
+      android:id="@+id/to_do_list"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toBottomOf="@id/quote_author"
+      android:paddingBottom="48dp"
+      android:clipToPadding="false"
+      />
+</androidx.constraintlayout.widget.ConstraintLayout>
