--- a/feature-daily/src/main/res/layout/fragment_daily.xml
+++ b/feature-daily/src/main/res/layout/fragment_daily.xml
@@ -1,60 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
     >
-
-  <ImageView
-      android:id="@+id/weather_icon"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      app:layout_constraintTop_toTopOf="parent"
-      />
-
-  <TextView
-      android:id="@+id/weather_temperature"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      android:textAlignment="center"
-      android:textSize="12sp"
-      app:layout_constraintTop_toBottomOf="@id/weather_icon"
-      tools:text="12 Degrees"
-      />
-
-  <TextView
-      android:id="@+id/quote_text"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      android:textAlignment="center"
-      android:textSize="12sp"
-      app:layout_constraintTop_toBottomOf="@id/weather_temperature"
-      tools:text="Some Quote that is inspirational"
-      />
-
-  <TextView
-      android:id="@+id/quote_author"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_margin="16dp"
-      android:textAlignment="center"
-      android:textSize="12sp"
-      app:layout_constraintTop_toBottomOf="@id/quote_text"
-      tools:text="Some Author"
-      />
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/to_do_list"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      app:layout_constraintTop_toBottomOf="@id/quote_author"
-      android:paddingBottom="48dp"
+      android:layout_height="match_parent"
+      android:layout_marginStart="8dp"
+      android:layout_marginEnd="8dp"
       android:clipToPadding="false"
+      android:paddingBottom="48dp"
+      app:layout_behavior="@string/appbar_scrolling_view_behavior"
       />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+  <com.google.android.material.appbar.AppBarLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@drawable/bg_gradient_primary"
+      >
+
+    <com.google.android.material.appbar.CollapsingToolbarLayout
+        android:id="@+id/collapsing_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_gradient_primary"
+        app:collapsedTitleTextAppearance="@style/CollapsedTitle"
+        app:contentScrim="@color/primaryColor"
+        app:expandedTitleGravity="bottom"
+        app:expandedTitleMarginBottom="24dp"
+        app:expandedTitleMarginEnd="16dp"
+        app:expandedTitleMarginStart="16dp"
+        app:expandedTitleTextAppearance="@style/ExpandedTitle"
+        app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
+        app:titleEnabled="true"
+        tools:title="Sunday, 19. Apr 2020"
+        >
+
+      <androidx.constraintlayout.widget.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="48dp"
+          android:layout_marginBottom="120dp"
+          app:layout_collapseMode="parallax"
+          app:layout_collapseParallaxMultiplier="0.5"
+          >
+
+        <ImageView
+            android:id="@+id/weather_icon"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/weather_temperature"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textAlignment="center"
+            android:textColor="@color/lightTextColor"
+            android:textSize="18sp"
+            app:layout_constraintTop_toBottomOf="@id/weather_icon"
+            tools:text="12 Degrees"
+            />
+
+        <TextView
+            android:id="@+id/quote_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textAlignment="center"
+            android:textColor="@color/lightTextColor"
+            android:textSize="14sp"
+            app:layout_constraintTop_toBottomOf="@id/weather_temperature"
+            tools:text="Some Quote that is inspirational"
+            />
+
+        <TextView
+            android:id="@+id/quote_author"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:textAlignment="center"
+            android:textColor="@color/lightTextColor"
+            android:textSize="12sp"
+            app:layout_constraintTop_toBottomOf="@id/quote_text"
+            tools:text="Some Author"
+            />
+
+      </androidx.constraintlayout.widget.ConstraintLayout>
+
+      <androidx.appcompat.widget.Toolbar
+          android:id="@+id/app_bar"
+          android:layout_width="match_parent"
+          android:layout_height="?attr/actionBarSize"
+          android:background="@drawable/bg_gradient_primary"
+          app:layout_collapseMode="pin"
+          />
+
+    </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+  </com.google.android.material.appbar.AppBarLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
