--- a/feature-daily/src/main/res/layout/fragment_daily.xml
+++ b/feature-daily/src/main/res/layout/fragment_daily.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     >
 
   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/to_do_list"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:layout_marginStart="8dp"
-      android:layout_marginEnd="8dp"
       android:clipToPadding="false"
       android:paddingBottom="48dp"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_gradient_primary"
         app:collapsedTitleTextAppearance="@style/CollapsedTitle"
-        app:contentScrim="@color/primaryColor"
+        app:contentScrim="@android:color/transparent"
         app:expandedTitleGravity="bottom"
         app:expandedTitleMarginBottom="24dp"
         app:expandedTitleMarginEnd="16dp"
@@ -46,49 +46,81 @@
           android:layout_marginTop="48dp"
           android:layout_marginBottom="120dp"
           app:layout_collapseMode="parallax"
-          app:layout_collapseParallaxMultiplier="0.5"
+          app:layout_collapseParallaxMultiplier="0.8"
           >
 
         <ImageView
             android:id="@+id/weather_icon"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintEnd_toStartOf="@id/weather_separator"
             app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_weather_few_clouds_day"
+            />
+
+        <View
+            android:id="@+id/weather_separator"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="16dp"
+            android:background="@color/lightTextColor"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
+            app:layout_constraintBottom_toBottomOf="@id/weather_icon"
+            app:layout_constraintEnd_toStartOf="@id/weather_temperature"
+            app:layout_constraintTop_toTopOf="@id/weather_icon"
             />
 
         <TextView
             android:id="@+id/weather_temperature"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
+            android:layout_marginEnd="16dp"
             android:textAlignment="center"
             android:textColor="@color/lightTextColor"
             android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/weather_icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/weather_icon"
+            tools:text="-12.3°C"
+            />
+
+        <ImageView
+            android:id="@+id/quotation_mark"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="48dp"
+            android:src="@drawable/ic_quotation_mark"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/weather_icon"
-            tools:text="12 Degrees"
             />
 
         <TextView
             android:id="@+id/quote_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textAlignment="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="16dp"
             android:textColor="@color/lightTextColor"
             android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@id/weather_temperature"
+            app:layout_constraintTop_toBottomOf="@id/quotation_mark"
             tools:text="Some Quote that is inspirational"
             />
 
         <TextView
             android:id="@+id/quote_author"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:textAlignment="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
             android:textColor="@color/lightTextColor"
             android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/quote_text"
             tools:text="Some Author"
             />
