--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
   <color name="primaryLightColor">#ff95d0</color>
   <color name="primaryDarkColor">#b92d71</color>
   <color name="secondaryColor">#eecda3</color>
+  <color name="colorSecondary">@color/secondaryColor</color>
   <color name="secondaryLightColor">#ffffd4</color>
   <color name="secondaryDarkColor">#bb9c74</color>
   <color name="primaryTextColor">#000000</color>
