--- a/core/src/main/res/values/styles.xml
+++ b/core/src/main/res/values/styles.xml
@@ -4,9 +4,10 @@
     <item name="colorPrimary">@color/primaryColor</item>
     <item name="colorPrimaryDark">@color/primaryDarkColor</item>
     <item name="colorAccent">@color/primaryColor</item>
-    <item name="android:windowDrawsSystemBarBackgrounds">true</item>
-    <item name="android:statusBarColor">@android:color/transparent</item>
-    <item name="statusBarBackground">@drawable/bg_gradient_primary</item>
+    <item name="android:statusBarColor">@color/primaryColor</item>
+    <!--    <item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+    <!--    <item name="android:statusBarColor">@android:color/transparent</item>-->
+    <!--    <item name="statusBarBackground">@drawable/bg_gradient_primary</item>-->
   </style>
 
   <style name="ExpandedTitle" parent="TextAppearance.AppCompat.Display3">
