--- a/feature-daily/src/main/res/layout/fragment_daily.xml
+++ b/feature-daily/src/main/res/layout/fragment_daily.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,7 +12,7 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:clipToPadding="false"
-      android:paddingBottom="48dp"
+      android:paddingBottom="88dp"
       app:layout_behavior="@string/appbar_scrolling_view_behavior"
       />
 
@@ -46,7 +45,7 @@
           android:layout_marginTop="48dp"
           android:layout_marginBottom="120dp"
           app:layout_collapseMode="parallax"
-          app:layout_collapseParallaxMultiplier="0.8"
+          app:layout_collapseParallaxMultiplier="0.5"
           >
 
         <ImageView
@@ -138,5 +137,16 @@
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
   </com.google.android.material.appbar.AppBarLayout>
+
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:id="@+id/add_todo"
+      style="@style/Widget.MaterialComponents.FloatingActionButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="bottom|end"
+      android:layout_margin="16dp"
+      app:srcCompat="@drawable/ic_plus"
+      app:fabSize="normal"
+      />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
